02_Infra_AKSAGIC_withHelm/template/ingressvotingapp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: votingfront
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: self-signed-aks-teknews-cloud
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: azure-vote-front
          servicePort: 80
